# grepika

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.claude/: settings.json
.claude/commands/: index.md
.claude/plugins/agentika-grep/: plugin.json
.claude/plugins/agentika-grep/agents/: explorer.md
.claude/plugins/grepika/: plugin.json
.claude/plugins/grepika/agents/: explorer.md
.claude/skills/impact/: SKILL.md
.claude/skills/index-status/: SKILL.md
.claude/skills/investigate/: SKILL.md
.claude/skills/learn-codebase/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  guardika.yml  release.yml
benches/: cli_comparison.rs  hot_paths.rs  token_efficiency.rs
docs/: claude-code-setup.md  claude-code-snippet.md  cursor-setup-guide.md  cursor-setup.md  hooks-example.json  opencode-setup.md  token-efficiency-analysis.md
eval-fixtures/: Makefile  boilerplate.ts  clean.test.ts  clean.ts  comments.test.ts  comments.ts  config_helper.test.ts  config_helper.ts  d1.txt  d11.txt  d12.txt  d13.txt  d14.txt  d15.txt  d16.txt  d17.txt  d18.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  d8.txt  no_newline.txt  parser.ts  redundant.test.ts  redundant.ts  repetition.test.ts  repetition.ts  replacement.test.ts  replacement.ts  sloppy.ts  sloppy_code.ts  two_fails.txt  wrong.py
eval-fixtures/many/: module_01.test.ts  module_01.ts  module_02.ts  module_03.ts  module_04.ts  module_05.ts  module_06.ts  module_07.ts  module_08.ts  module_09.ts  module_10.ts  module_11.ts  module_12.ts  module_13.ts  module_14.ts  module_15.ts  module_16.ts  module_17.ts  module_18.ts  module_19.ts  module_20.ts  module_25.ts
npm/agentika-grep/: index.js  package.json
npm/agentika-grep-darwin-arm64/: package.json
npm/agentika-grep-darwin-x64/: package.json
npm/agentika-grep-linux-arm64/: package.json
npm/agentika-grep-linux-x64/: package.json
npm/agentika-grep-win32-x64/: package.json
npm/grepika/: README.md  index.js  package.json
npm/grepika-darwin-arm64/: README.md  package.json
npm/grepika-darwin-x64/: package.json
npm/grepika-linux-arm64/: README.md  package.json
npm/grepika-linux-x64/: README.md  package.json
npm/grepika-win32-x64/: README.md  package.json
scripts/: capture_schema.sh  install.sh
src/: bench_utils.rs  error.rs  fmt.rs  lib.rs  main.rs  profiling.rs  security.rs  server.rs  types.rs
src/db/: mod.rs  pragmas.rs  schema.rs
src/services/: fts.rs  git_diff.rs  grep.rs  indexer.rs  mod.rs  ngram.rs  regex_literals.rs  search.rs  trigram.rs
src/tools/: analysis.rs  content.rs  index.rs  mod.rs  search.rs
tests/: concurrent.rs  error_handling.rs  security.rs  tools.rs
tests/common/: mod.rs
tests/fixtures/: guardika-emoji.txt  guardika-empty-desc.txt  guardika-multi-fail.txt  guardika-no-newline.txt  guardika-slop.ts  guardika-test.txt
